Make application null-safe (NullAway, #56)
- pom: jspecify dependency and maven-compiler plugin with error-prone, nullaway and lombok
- lombok.config
- vs code runtime = java 25
- adding package-info.java files in (sub)folders where relevant, with default @NullMarked
- adding @Nullable to arguments and method returns where necessary. Also added a bunch of null checks, sometimes changed the null value to a non null value
- nice refactoring in normalizeInputPages